# 04-evaluation

./: .gitignore  README.md  download.py  evaluation_utils.py  main.py  pyproject.toml
data/: ground_truth-new.csv
